fixed Z-index of overlapping icons

--- a/src/components/ProjectDetails.css
+++ b/src/components/ProjectDetails.css
@@ -79,6 +79,4 @@
 
 .icon {
   height: 50px;
-  position: relative;
-  z-index: 3;
 }
